--- a/ProjectSky/Assembly-CSharp.csproj
+++ b/ProjectSky/Assembly-CSharp.csproj
@@ -63,9 +63,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\CamAndControlsSwitch.cs" />
+    <Compile Include="Assets\Scripts\MovimientoExplorador.cs" />
     <Compile Include="Assets\Scripts\MovimientoPJ.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Cinemachine">
+      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Cinemachine.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
@@ -85,17 +90,14 @@
     <Reference Include="Unity.Rider.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="com.unity.cinemachine.editor">
+      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/com.unity.cinemachine.editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Cinemachine">
-      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Cinemachine.dll</HintPath>
-    </Reference>
-    <Reference Include="com.unity.cinemachine.editor">
-      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/com.unity.cinemachine.editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.17f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
