--- a/ProjectSky/Assembly-CSharp.csproj
+++ b/ProjectSky/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CamAndControlsSwitch.cs" />
+    <Compile Include="Assets\Scripts\CamaraPerspectivas.cs" />
     <Compile Include="Assets\Scripts\MovimientoExplorador.cs" />
     <Compile Include="Assets\Scripts\MovimientoPJ.cs" />
     <Reference Include="Unity.Timeline.Editor">
