Follow del Player
ahora el otro pj sigue al que estas usando

--- a/ProjectSky/Assembly-CSharp.csproj
+++ b/ProjectSky/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CamAndControlsSwitch.cs" />
     <Compile Include="Assets\Scripts\CamaraPerspectivas.cs" />
+    <Compile Include="Assets\Scripts\FollowPlayer.cs" />
     <Compile Include="Assets\Scripts\MovimientoExplorador.cs" />
     <Compile Include="Assets\Scripts\MovimientoPJ.cs" />
     <Reference Include="Unity.Timeline.Editor">
