--- a/ProjectSky/Assembly-CSharp.csproj
+++ b/ProjectSky/Assembly-CSharp.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Assets\Scripts\Managers\FollowPlayer.cs" />
     <Compile Include="Assets\Scripts\Menu\CargadorNivel.cs" />
     <Compile Include="Assets\Scripts\Menu\LevelManager.cs" />
+    <Compile Include="Assets\Scripts\Players\Explorador\Grapple.cs" />
+    <Compile Include="Assets\Scripts\Players\Explorador\Hook.cs" />
     <Compile Include="Assets\Scripts\Players\Explorador\MovimientoExplorador.cs" />
     <Compile Include="Assets\Scripts\Players\TakeDamage.cs" />
     <Compile Include="Assets\Scripts\Players\Warrior\MovimientoPJ.cs" />
