--- a/ProjectSky/Assembly-CSharp.csproj
+++ b/ProjectSky/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\Menu\CargadorNivel.cs" />
     <Compile Include="Assets\Scripts\Menu\LevelManager.cs" />
     <Compile Include="Assets\Scripts\Players\Explorador\Grapple.cs" />
+    <Compile Include="Assets\Scripts\Players\Explorador\GroundSensorr.cs" />
     <Compile Include="Assets\Scripts\Players\Explorador\Hook.cs" />
     <Compile Include="Assets\Scripts\Players\Explorador\MovimientoExplorador.cs" />
     <Compile Include="Assets\Scripts\Players\TakeDamage.cs" />
