Ataque a distancia guerrero

--- a/ProjectSky/Assembly-CSharp.csproj
+++ b/ProjectSky/Assembly-CSharp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Scripts\Players\Explorador\Lantern.cs" />
     <Compile Include="Assets\Scripts\Players\Explorador\MovimientoExplorador.cs" />
     <Compile Include="Assets\Scripts\Players\TakeDamage.cs" />
+    <Compile Include="Assets\Scripts\Players\Warrior\FireAttackPrefab.cs" />
     <Compile Include="Assets\Scripts\Players\Warrior\MovimientoPJ.cs" />
     <Compile Include="Assets\Scripts\Players\Warrior\WarriorAttacks.cs" />
     <Compile Include="Assets\Scripts\PruebaEnemigoHP.cs" />
@@ -148,14 +149,23 @@
     <Reference Include="Cinemachine">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Cinemachine.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.ProGrids">
+      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProGrids.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.VSCode.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.ProBuilder.AssetIdRemapUtility">
+      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Runtime">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ProGrids.Editor">
+      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProGrids.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
@@ -181,6 +191,9 @@
     <Reference Include="com.unity.cinemachine.editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/com.unity.cinemachine.editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.ProBuilder.AddOns.Editor">
+      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProBuilder.AddOns.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.ShaderGraph.Editor">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
     </Reference>
@@ -192,18 +205,6 @@
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProBuilder.AssetIdRemapUtility">
-      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProBuilder.AddOns.Editor">
-      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProBuilder.AddOns.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProGrids">
-      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProGrids.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProGrids.Editor">
-      <HintPath>C:/Users/USUARIO/Documents/GitHub/Jueguitow/ProjectSky/Library/ScriptAssemblies/Unity.ProGrids.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.17f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
